# test-bazel-repo

./: .bazeliskrc  MODULE.bazel  WORKSPACE
endorctl/: maven_install.json
examples/java/: BUILD
