module(
    name = "rules_endor",
    version = "1.0.0",
)

bazel_dep(name = "bazel_skylib", version = "1.1.1")
bazel_dep(name = "rules_jvm_external", version = "6.10")
bazel_dep(name = "rules_java", version = "8.5.0")

maven = use_extension("@rules_jvm_external//:extensions.bzl", "maven")
maven.install(
    artifacts = [
        "com.google.code.findbugs:jsr305:3.0.2",
        "com.google.errorprone:error_prone_annotations:2.11.0",
        "com.google.j2objc:j2objc-annotations:1.3",
        "org.codehaus.mojo:animal-sniffer-annotations:1.20",
        "org.checkerframework:checker-qual:3.12.0",
        "org.apache.commons:commons-text:1.10.0",
        "junit:junit:4.13.2",
    ],
    repositories = [
        "https://repo1.maven.org/maven2",
    ],
)
use_repo(maven, "maven")
